--- a/style.css
+++ b/style.css
@@ -43,18 +43,15 @@ textarea{
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: grey;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: red;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: green;
 }
 
 .saveBtn {
